--- a/components/Header/TopBar/TopBar.scss
+++ b/components/Header/TopBar/TopBar.scss
@@ -1,3 +1,24 @@
 .top-bar{
-    
+    height: 90px;
+    background-color: aqua;
+
+    .ui.grid {
+        margin: 0;
+        padding: 0;
+        .column{
+            padding: 0;
+        }
+    }
+    &__left{
+        display: flex !important;
+        align-items: center;
+        img{
+            height: 50px;
+            transition: all 0.5;
+            
+            &:hover{
+                transform: translate(-15px);
+            }
+        }
+    }
 }
