--- a/components/Header/TopBar/TopBar.scss
+++ b/components/Header/TopBar/TopBar.scss
@@ -1,23 +1,68 @@
-.top-bar{
+.top-bar {
     height: 90px;
-    background-color: aqua;
+    background-color: $background-dark;
 
     .ui.grid {
         margin: 0;
         padding: 0;
-        .column{
+
+        .column {
             padding: 0;
         }
     }
-    &__left{
+
+    &__left {
         display: flex !important;
         align-items: center;
-        img{
-            height: 50px;
-            transition: all 0.5;
-            
-            &:hover{
+
+        img {
+            height: 70px;
+            transition: all 0.5s;
+
+            &:hover {
                 transform: translate(-15px);
+            }
+        }
+    }
+
+    &__right {
+        display: flex !important;
+        align-items: center;
+        justify-content: flex-end;
+
+
+        .ui.icon.input>input {
+            padding-right: 5px !important;
+        }
+
+
+        .ui.input {
+            align-items: center;
+            margin-right: 25px;
+
+            input {
+                background-color: transparent !important;
+                border: 0;
+                border-bottom: 2px solid $primary  !important;
+                border-radius: 0;
+                color: $primary  !important;
+                padding: 5px 0 !important;
+                width: 220px;
+                font-size: 20px;
+                transition: width 0.7s;
+                padding-right: 0px !important;
+
+                &:focus {
+                    width: 250px;
+                }
+
+            }
+
+            i {
+                color: $primary;
+                opacity: 1 !important;
+                font-size: 25px;
+                right: -50px !important;
             }
         }
     }
