--- a/components/Header/Menu/Menu.scss
+++ b/components/Header/Menu/Menu.scss
@@ -1,1 +1,14 @@
-.menu {}
+.menu {
+    background-color: $background-grey-dark;
+    border-radius: 0;
+
+    .ui.grid{
+        margin: 0;
+    }
+    &__left,
+    &__right {
+        padding: 0 !important;
+        display: flex !important;
+        align-items: center;
+    }
+}
